--- a/ls.css
+++ b/ls.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gainsboro ;
+    background-color: floralwhite ;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -71,9 +71,21 @@ h1 {
     font-size: small;
 }
 
-.img{
+.img1{
 
-  width: 500px; /* Adjust the width value as desired */
+  width: 75%; /* Adjust the width value as desired */
   height: auto; /* The height will adjust automatically to maintain the image's aspect ratio */
-
+  margin-left: 100px;
 }
+
+.img2{
+
+    width: 75%; /* Adjust the width value as desired */
+    height: auto; /* The height will adjust automatically to maintain the image's aspect ratio */
+    margin-left: 100px;
+  }
+
+  .le{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+  }
